Change image source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="div_songs">
         <h2>Like Him</h2>
         <h4>Tyler, The Create, Lola Young | Chromakopia</h3>
-        <img src="images/Chromakopia_cover.jpg" />
+        <img src="https://i.scdn.co/image/ab67616d0000b273124e9249fada4ff3c3a0739c" />
         <p>
           If you know the story behind this song you'll understand that it's pretty
           emotional. Plus I just like Tyler's production
@@ -22,7 +22,7 @@
       <div class="div_songs">
         <h2>Let It All Work Out</h2>
         <h4>Lil Wayne | Tha Carter V</h3>
-        <img src="images/Tha_Carter_cover.jpg" />
+        <img src="https://i.scdn.co/image/ab67616d0000b273bb1138165ad4ec2306f4e886" />
         <p>
           I've been listening to this song a loooot. My friend has always preached
           Lil Wayne being great but I only recently started actually listening to
@@ -32,7 +32,7 @@
       <div class="div_songs">
         <h2>Go the Distance</h2>
         <h4>Roger Bart, Disney | Go the Distance</h3>
-        <img src="images/Hercules_cover.jpg" />
+        <img src="https://i.scdn.co/image/ab67616d0000b273f6a713be4f418307ab7ffaf4" />
         <p>
           I don't know why this was #3 on my Spotify On Repeat but hey.
           Hercules is peak top 3 Disney movies.
