Add github link to page

--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
         </p>
       </div>
     </div>
+
+    <div style="text-align: center; margin-top: 20px; font-size: x-large;">
+      <a href="https://github.com/aleguy02/GHW-deploy-static-site/tree/main#ales-on-repeat" target="_blank">Learn how I deployed this site</a>
+    </div>
   </body>
 </html>
