--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div style="text-align: center; margin-top: 20px; font-size: x-large;">
-      <a href="https://github.com/aleguy02/GHW-deploy-static-site/tree/main#ales-on-repeat" target="_blank">Learn how I deployed this site</a>
+      <a href="https://github.com/aleguy02/GHW-deploy-static-site/tree/main#ales-on-repeat" target="_blank">Learn how I deployed this site AND set up a CD pipeline</a>
     </div>
   </body>
 </html>
