Create personal site

--- a/index.html
+++ b/index.html
@@ -3,44 +3,60 @@
   <head>
     <title>On Repeat</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter"
+      rel="stylesheet"
+    />
     <!-- This tells you where to get styles from ^^ -->
   </head>
   <body>
-    <h1 style="text-align: center">Ale's On Repeat</h1>
-    <div
-      style="display: flex; flex-direction: row; justify-content: space-evenly"
-    >
-      <div class="div_songs">
-        <h2>Like Him</h2>
-        <h4>Tyler, The Create, Lola Young | Chromakopia</h3>
-        <img src="https://i.scdn.co/image/ab67616d0000b273124e9249fada4ff3c3a0739c" />
-        <p>
-          If you know the story behind this song you'll understand that it's pretty
-          emotional. Plus I just like Tyler's production
-        </p>
+    <!-- <div class="responsive-container">
+      <img src="public/images/gator-on-computer.png" alt="gator-on-computer" />
+    </div> -->
+
+    <h1>Hi, I'm Ale</h1>
+    <div class="text-container">
+      <p>
+        I'm a Computer Science major at the University of Florida who loves
+        writing code. In my free time, I love staying up to date on the latest
+        in tech and video games, taking care of my bonsai trees 🌱, and using my
+        art skills (either by drawing or making UIs). Ever since I downloaded
+        the GitHub mobile app, I’ve been enjoying scrolling through GitHub and
+        discovering cool repositories.
+        <br />
+        <br />
+        Want to learn more about me? Check out any of these cards.
+      </p>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img src="public/images/card-blog.png" alt="blog-card" />
       </div>
-      <div class="div_songs">
-        <h2>Let It All Work Out</h2>
-        <h4>Lil Wayne | Tha Carter V</h3>
-        <img src="https://i.scdn.co/image/ab67616d0000b273bb1138165ad4ec2306f4e886" />
-        <p>
-          I've been listening to this song a loooot. My friend has always preached
-          Lil Wayne being great but I only recently started actually listening to
-          him.
-        </p>
+      <div class="card">
+        <img src="public/images/card-github.png" alt="github-card" />
       </div>
-      <div class="div_songs">
-        <h2>Feel It</h2>
-        <h4>d4vd | Feel It</h3>
-        <img src="https://i.scdn.co/image/ab67616d0000b273a9da992c2ef398245027d654" />
-        <p>
-          Peak fiction
-        </p>
+      <div class="card">
+        <img src="public/images/card-linkedin.png" alt="linkedin" />
       </div>
     </div>
 
-    <div style="text-align: center; margin-top: 20px; font-size: x-large;">
-      <a href="https://github.com/aleguy02/GHW-deploy-static-site/tree/main#ales-on-repeat" target="_blank">Learn how I deployed this site AND set up a CD pipeline</a>
-    </div>
+    <p>
+      <a href="https://blog.aleguy02.dev">
+        <img
+          src="https://img.shields.io/badge/blog-blog.aleguy02.dev-1BC?logo=hugo&logoColor=white&style=flat-square"
+        />
+      </a>
+      <a href="https://github.com/aleguy02">
+        <img
+          src="https://img.shields.io/badge/github-@aleguy02-211F1F?logo=github&logoColor=white&style=flat-square"
+        />
+      </a>
+      <a href="https://www.linkedin.com/in/alejandrovillate1/">
+        <img
+          src="https://img.shields.io/badge/linkedin-Alejandro_Villate-0072B1?logo=linkedin&style=flat-square"
+        />
+      </a>
+    </p>
   </body>
 </html>
