--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <p>
         I'm a Computer Science major at the University of Florida who loves
         writing code. In my free time, I love staying up to date on the latest
-        in tech and video games, taking care of my bonsai trees 🌱, and using my
+        in tech and video games, taking care of my bonsai trees, and using my
         art skills (either by drawing or making UIs). Ever since I downloaded
-        the GitHub mobile app, I’ve been enjoying scrolling through GitHub and
+        the GitHub mobile app, I've been enjoying scrolling through GitHub and
         discovering cool repositories.
         <br />
         <br />
