--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>On Repeat</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
-    />
+    /> -->
     <!-- This tells you where to get styles from ^^ -->
   </head>
   <body>
