Update style.css and index.html

--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
   <head>
     <title>On Repeat</title>
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
-    /> -->
+    />
     <!-- This tells you where to get styles from ^^ -->
   </head>
   <body>
-    <!-- <div class="responsive-container">
-      <img src="public/images/gator-on-computer.png" alt="gator-on-computer" />
-    </div> -->
-
     <h1>Hi, I'm Ale</h1>
     <div class="text-container">
       <p>
